fix: chat-container overflowing outside of root element

--- a/src/client/Chat.css
+++ b/src/client/Chat.css
@@ -1,4 +1,5 @@
 .chat {
+  min-height: 0;
   height: 100%;
   display: flex;
   flex-direction: row;
